created StraboServerFactory and finalized login logic

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -9,8 +9,8 @@
     <form ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
+          <span class="input-label">Email</span>
+          <input type="text" ng-model="loginData.email">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
@@ -21,5 +21,6 @@
         </label>
       </div>
     </form>
+    <div>{{error.message}}</div>
   </ion-content>
 </div>
