fixed date issues with update to ionic beta 14

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -18,11 +18,11 @@
           </label>
           <label class="item item-input">
             <span class="input-label"><b>Date</b></span>
-            <input type="date" ng-model="spot.properties.date" value={{spot.properties.date}}>
+            <input type="date" ng-model="spot.properties.date">
           </label>
           <label class="item item-input">
             <span class="input-label"><b>Time</b></span>
-            <input type="time" ng-model="spot.properties.time" value={{spot.properties.time}}>
+            <input type="time" ng-model="spot.properties.time">
           </label>
       </div>
 
