refactored offline maps; can now archive macrostrat tiles

--- a/www/templates/archiveTiles.html
+++ b/www/templates/archiveTiles.html
@@ -26,6 +26,7 @@
     <div class="padding">
       <button class="button button-block button-positive" ng-click="submit($event)">Archive this map</button>
       <progress ng-value="map.percentDownload" max="100" ng-show="map.showProgressBar"></progress>
+      <progress ng-value="map.overLayPercentDownload" max="100" ng-show="map.showProgressBar"></progress>
     </div>
   </ion-content>
 </ion-view>
