removed unnecessary scroll in popup and updated popups library

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -63,10 +63,15 @@
   transition: opacity .25s
 }
 .ol-popup {
-  padding: 10px;
+  padding: 5px;
 }
+
 table#popup-table{
-  width: 100%;
+  margin: 5px;
+}
+th#name{
+  text-align: left;
+  font-weight: bold;
 }
 
 .layer-switcher {
