--- a/www/templates/commonFieldsForm.html
+++ b/www/templates/commonFieldsForm.html
@@ -1,4 +1,4 @@
-<ion-view title="Spot Detail">
+<ion-view title="Common Spot Detail">
   <ion-nav-buttons side="right">
     <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-a"></button>
     <button ng-click="cameraModal()" class="button button-icon icon ion-camera"></button>
