--- a/www/templates/modals/allModal.html
+++ b/www/templates/modals/allModal.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
   <ion-header-bar>
-    <h1 class="title">Select a Line Spot Type</h1>
+    <h1 class="title">Select a Spot Type</h1>
     <div class="button button-clear" ng-click="closeModal()"><span class="icon ion-close"></span></div>
   </ion-header-bar>
   <ion-content>
