spot ui updates

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -1,6 +1,6 @@
 <ion-view title="Spot Detail">
   <ion-nav-buttons side="right">
-    <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-a"></button>
+    <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-b"></button>
     <button ng-click="cameraModal()" class="button button-icon icon ion-camera"></button>
     <button ng-click="goToSpot();" class="button button-icon icon ion-eye"></button>
   </ion-nav-buttons>
@@ -9,14 +9,14 @@
       <div class="row responsive-md">
         <div class="col">
           <label class="item item-input">
-            <span class="input-label"><b>Spot Type</b>
-            </span>
-            <input type="text" disabled ng-model="spot.properties.spottype">
-          </label>
-          <label class="item item-input">
             <span class="input-label"><b>Spot Name</b>
             </span>
             <input type="text" placeholder="Name this Spot" ng-model="spot.properties.name" autofocus>
+          </label>
+          <label class="item item-input">
+            <span class="input-label"><b>Spot Type</b>
+            </span>
+            <input type="text" disabled ng-model="spot.properties.spottype">
           </label>
           <label class="item item-input">
             <span class="input-label"><b>ID</b>
@@ -40,10 +40,14 @@
           <div class="item item-divider">
             Location & Geometry
           </div>
-          Feature Type: {{spot.geometry.type}}
-            <label class="item item-input">
-          <input type="string" ng-model="friendlyGeom" value={{friendlyGeom}} ng-disabled="true">
-            </label>
+          <label class="item item-input">
+            <span class="input-label"><b>Map Representation</b>
+            </span>
+            <input type="text" disabled ng-model="spot.geometry.type">
+          </label>
+          <!--<label class="item item-input">
+                <input type="string" ng-model="friendlyGeom" value={{friendlyGeom}} ng-disabled="true">
+          </label>-->
           <label class="item item-input" ng-show="showLatLng">
             <span class="input-label">Latitude</span>
             <input type="number" ng-model="point.latitude" value={{point.latitude}}>
@@ -53,9 +57,9 @@
             <input type="number" ng-model="point.longitude" value={{point.longitude}}>
           </label>
           <div>
-            Update Location From
+           <!-- Modify Location or Shape -->
             <div>
-              <ion-buttons>
+              <ion-buttons ng-show="showMyLocationButton">
                 <button ng-click="getLocation();" class="button icon-left ion-pinpoint">My Location</button>
               </ion-buttons>
 
