--- a/www/templates/sync.html
+++ b/www/templates/sync.html
@@ -1,13 +1,12 @@
-<ion-view title="Sync">
+<ion-view title="Database Sync">
   <ion-nav-buttons side="left">
-    <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
     <button ng-click="downloadSpots();" class="button button-icon icon ion-android-download"></button>
     <button ng-click="uploadSpots();" class="button button-icon icon ion-upload"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Database Sync</h1>
     <h6 ng-hide="hideActionButtons.logout">You are currently logged in as: {{loginData.email}}</h6>
     <label class="item item-input" ng-hide="hideActionButtons.login">
       <span class="input-label"><b>Email</b></span>
