--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -175,7 +175,13 @@
       <label class="item item-input">
         <textarea placeholder="Notes about this Spot" rows="4" ng-model="spot.properties.notes"></textarea>
       </label>
-      
+
+      <div ng-show="showLinkToNewOrientation">
+        <br>
+        <button ng-click="newOrientation();" class="button button-small icon-left icon ion-link">Link to New Orientation</button>
+        <br><br>
+      </div>
+
       <!-- Related Spots -->
       <div ng-show="showRelatedSpots">
         <div class="item item-divider">
